--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="content">
                 <header>
                     <div class="logo">
-                        <h1><a href="./index.html" target="_blank" rel="noopener noreferrer">logo</a></h1>
+                        <h1><a href="./index.html" target="_blank" rel="noopener noreferrer"><img src="./imgs/logo-GPQIT-anim.gif" alt=""></a></h1>
                         <div class="list-mobile">
                             <i class="fas fa-bars"></i>
                         </div>
@@ -59,31 +59,14 @@
             <div class="content">
                 <div class="prof">
                     <div class="prof-people">
-                        <a href="#"><img src="./imgs/091ed85b-9fa1-4050-9ca2-0816419b971a.jpeg"></a>
+                        <a href="#"><img src="./imgs/5856e43d-99d7-400c-9c4d-d67201fadf99.jpg"></a>
                     </div>
                     <!--prof-people-->
                     <div class="prof-infor">
-                        <h1>Emmanuel Silva Marinho</h1>
-                        <p>Possui graduação em Química, mestrado e doutorado em Bioquímica pela Universidade Federal do
-                            Ceará.
-                            Atualmente, é professor Adjunto da Universidade Estadual do Ceará e professor colaborador
-                            dos
-                            Programas de Pós-Graduação em Ciências Naturais da Universidade Estadual do Ceará (UECE) e
-                            Pós-Graduação em Quimica da Universidade Estadual do Ceará(UFC).Foi coordenador do curso de
-                            Licenciatura em química no período 2015 a 2017 e de 2018 a 2019, respectivamente. Atualmente
-                            coordena o curso de licenciatura em computação e o Grupo de Química Teórica e Eletroquímica
-                            ( GQTE
-                            ). Os temas de pesquisa de interesse estão associados às áreas de físico-química e
-                            biofísica, com
-                            ênfase na Química Teórica e Físico-química orgânica. Antioxidantes, adsorção, espectroscopia
-                            molecular, mecanismo de reações, simulação de propriedades eletrônicas e estruturais de
-                            moléculas de
-                            interesse biológico e ambiental por meio de cálculos ab initio e DFT são as pesquisas de
-                            interesse
-                            na área de química teórica computacional e Físico-química orgânica. Docking molecular,
-                            dinâmica
-                            molecular, modelagem de proteínas são os temas de pesquisa na área de Bioinformática e
-                            Biofísica</p>
+                        <h1>Helio</h1>
+                        <p>Ao terminarmos o nosso doutoramento, em 1997, fomos recebidos prontamente pelo Prof. Wagner B. De Almeida em seu grupo de pesquisa para um estágio de Pós-Doutorado. Já nesta época, o Laboratório de Química Computacional e Modelagem Molecular -LQC-MM se encontrava consolidado com grande prestígio nacional e internacional. Em 1999, entramos para o quadro permanente do Departamento de Química na área de concentração em Química Inorgânica. Era um grande desafio: estabelecer a linha de pesquisa em Química Teórica na área de concentração em Química Inorgânica. Neste início, contamos com a ajuda inestimável do Prof. Wagner B. De Almeida que colocou o seu laboratório e suas facilidades a nossa disposição. Nos apoiou nas nossas iniciativas, abrindo espaço para uma colaboração efetiva e muito produtiva. Desta forma, participamos do LQC-MM como pesquisador associado até 2002. O nosso esforço em estabelecer e consolidarmos a nossa linha de pesquisa rendeu frutos. Com os novos alunos de graduação e de pós-graduação e a necessidade de espaço físico para novos equipamentos, tornou-se necessário o surgimento de um novo grupo de pesquisa: GPQIT.
+
+                            O GPQIT, está no Diretório de Pesquisa do CNPq e é reconhecido formalmente pela UFMG, tem como objetivo o desenvolvimento e aplicação de métodos teóricos no estudo de sistemas inorgânicos de interesse para o meio ambiente, para a catálise e para a área biológica.</p>
                     </div>
                     <!--prof-infor-->
                 </div>
@@ -113,11 +96,11 @@
                         <div class="locali-footer">
                             <h1>localização</h1>
 
-                            <p>Universidade Estadual do Ceará, Faculdade de Filosofia Dom Aureliano Matos - FAFIDAM.</p>
+                            <p>Universidade Federal de Minas Gerais, Departamento de Química - ICEx 
+                                Setor  Inorgânica.</p>
 
-                            <p>Endereço:Av. Dom Aureliano Matos, 2058
-                                centro
-                                62930000 - Limoeiro do Norte, CE - Brasil</p>
+                            <p>31.270-901 Belo Horizonte - MG
+                                Brasil</p>
                             <p>Telefone: (88) 34236962</p>
                             <p>Fax: (88) 34236963</p>
                             <a href="#" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
@@ -149,7 +132,7 @@
 
                     <div class="footer-singles">
                         <div class="logo-footer">
-                            <h1>logo ou outra coisa</h1>
+                            <img src="./imgs/logo-GPQIT-anim.gif" alt="">
                         </div>
                         <!--logo-footer-->
                     </div>
