Correção do header e footer

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
                 crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <body>
-
-            <div class="content">
+<!-- Trocar nome do professor emanuel para o helio e trocar logo das outras paginas -->
                 <header>
                     <div class="logo">
                         <h1><a href="./index.html" target="_blank" rel="noopener noreferrer"><img src="./imgs/logo-GPQIT-anim.gif" alt=""></a></h1>
@@ -53,8 +52,7 @@
                     <div class="clear"></div>
                     <!--clear-->
                 </header>
-            </div>
-            <!--content-->
+
 
             <div class="content">
                 <div class="prof">
@@ -63,7 +61,7 @@
                     </div>
                     <!--prof-people-->
                     <div class="prof-infor">
-                        <h1>Helio</h1>
+                        <h1>Grupo de Pesquisa em Quimica Inorganica Teorica</h1>
                         <p>Ao terminarmos o nosso doutoramento, em 1997, fomos recebidos prontamente pelo Prof. Wagner B. De Almeida em seu grupo de pesquisa para um estágio de Pós-Doutorado. Já nesta época, o Laboratório de Química Computacional e Modelagem Molecular -LQC-MM se encontrava consolidado com grande prestígio nacional e internacional. Em 1999, entramos para o quadro permanente do Departamento de Química na área de concentração em Química Inorgânica. Era um grande desafio: estabelecer a linha de pesquisa em Química Teórica na área de concentração em Química Inorgânica. Neste início, contamos com a ajuda inestimável do Prof. Wagner B. De Almeida que colocou o seu laboratório e suas facilidades a nossa disposição. Nos apoiou nas nossas iniciativas, abrindo espaço para uma colaboração efetiva e muito produtiva. Desta forma, participamos do LQC-MM como pesquisador associado até 2002. O nosso esforço em estabelecer e consolidarmos a nossa linha de pesquisa rendeu frutos. Com os novos alunos de graduação e de pós-graduação e a necessidade de espaço físico para novos equipamentos, tornou-se necessário o surgimento de um novo grupo de pesquisa: GPQIT.
 
                             O GPQIT, está no Diretório de Pesquisa do CNPq e é reconhecido formalmente pela UFMG, tem como objetivo o desenvolvimento e aplicação de métodos teóricos no estudo de sistemas inorgânicos de interesse para o meio ambiente, para a catálise e para a área biológica.</p>
@@ -90,7 +88,7 @@
             </div>
             <!--content-->
 
-            <div class="content">
+    
                 <footer>
                     <div class="footer-singles">
                         <div class="locali-footer">
@@ -138,8 +136,7 @@
                     </div>
                     <!--footer-singles-->
                 </footer>
-            </div>
-            <!--content-->
+      
 
             <script src="./scripts/heade.js"></script>
             <script src="./scripts/slide.js"></script>
