Adicionando novas paginas(MEMBERS E COLLABORATIONS) e mudanno footer e header

--- a/collaborations.html
+++ b/collaborations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Documen</title>
     <link rel="stylesheet" href="css/openings.css" />
     <link
       rel="stylesheet"
@@ -20,8 +20,8 @@
       <div class="logo">
         <h1>
           <a href="./index.html" target="_blank" rel="noopener noreferrer"
-            >logo</a
-          >
+            ><img src="./imgs/logo-GPQIT-anim.gif" alt=""
+          /></a>
         </h1>
         <div class="list-mobile">
           <i class="fas fa-bars"></i>
@@ -38,8 +38,8 @@
             >
           </li>
           <li>
-            <a href="./people.html" target="_blank" rel="noopener noreferrer"
-              >People</a
+            <a href="./members.html" target="_blank" rel="noopener noreferrer"
+              >Members</a
             >
           </li>
           <li>
@@ -57,7 +57,7 @@
           </li>
           <li>
             <a href="./openings.html" target="_blank" rel="noopener noreferrer"
-              >Openings</a
+              >Collaborations</a
             >
           </li>
           <li>
@@ -77,8 +77,8 @@
             >
           </li>
           <li>
-            <a href="./people.html" target="_blank" rel="noopener noreferrer"
-              >People</a
+            <a href="./members.html" target="_blank" rel="noopener noreferrer"
+              >Members</a
             >
           </li>
           <li>
@@ -96,7 +96,7 @@
           </li>
           <li>
             <a href="./openings.html" target="_blank" rel="noopener noreferrer"
-              >Openings</a
+              >Collaborations</a
             >
           </li>
           <li>
@@ -112,72 +112,16 @@
       <!--clear-->
     </header>
 
-    <div class="content">
-      <div class="openings">
-        <div class="openings-title">
-          <h1>vagas abertas</h1>
-        </div>
-        <!--openings-title-->
-
-        <div class="openings-wraper">
-          <div class="openings-single">
-            <h1>posiçoes de pos</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Recusandae officia veniam id expedita? Laboriosam repellendus,
-              velit, atque praesentium totam rerum itaque impedit quae rem amet
-              eligendi consequatur minima sapiente hic.
-            </p>
-
-            <nav>
-              <ul>
-                <h1>Abertura atual l:(0)</h1>
-                <li>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Accusantium magni cum rerum nesciunt id perferendis, sequi
-                  consequatur
-                </li>
-                <li>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Accusantium magni cum rerum nesciunt id perferendis, sequi
-                  consequatur
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <!--openings-single-->
-          <div class="openings-single">
-            <h1>posiçoes de pos</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Recusandae officia veniam id expedita? Laboriosam repellendus,
-              velit, atque praesentium totam rerum itaque impedit quae rem amet
-              eligendi consequatur minima sapiente hic.
-            </p>
-
-            <nav>
-              <ul>
-                <h1>Abertura atual l:(0)</h1>
-                <li>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Accusantium magni cum rerum nesciunt id perferendis, sequi
-                  consequatur
-                </li>
-                <li>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Accusantium magni cum rerum nesciunt id perferendis, sequi
-                  consequatur
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <!--openings-single-->
-        </div>
-        <!--openings-wraper-->
-      </div>
-      <!--openings-->
-    </div>
-    <!--content-->
+    <main class="cont">
+      <div class="collaborations">
+        <div class="collaborations-single">
+          
+        </div><!--collaborations-single-->
+        <div class="collaborations-single">
+          
+        </div><!--collaborations-single-->
+      </div><!--collaborations-->
+    </main><!--cont-->
 
     <footer>
       <div class="footer-singles">
@@ -185,14 +129,11 @@
           <h1>localização</h1>
 
           <p>
-            Universidade Estadual do Ceará, Faculdade de Filosofia Dom Aureliano
-            Matos - FAFIDAM.
+            Universidade Federal de Minas Gerais, Departamento de Química - ICEx
+            Setor Inorgânica.
           </p>
 
-          <p>
-            Endereço:Av. Dom Aureliano Matos, 2058 centro 62930000 - Limoeiro do
-            Norte, CE - Brasil
-          </p>
+          <p>31.270-901 Belo Horizonte - MG Brasil</p>
           <p>Telefone: (88) 34236962</p>
           <p>Fax: (88) 34236963</p>
           <a href="#" target="_blank" rel="noopener noreferrer"
@@ -206,16 +147,12 @@
         <div class="infor-footer">
           <h1>Noticas mais recentes</h1>
 
-          <a href="#" target="_blank" rel="noopener noreferrer"
-            >Novas memórias do Prof. Emmanuel Silva Marinho da silva</a
-          >
+          <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
           <span>16/09/1111</span>
 
           <div class="traco"></div>
 
-          <a href="#" target="_blank" rel="noopener noreferrer"
-            >Novas memórias do Prof. Emmanuel Silva Marinho da silva</a
-          >
+          <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
           <span>16/09/1111</span>
 
           <a href="#" target="_blank" rel="noopener noreferrer">
@@ -228,7 +165,7 @@
 
       <div class="footer-singles">
         <div class="logo-footer">
-          <h1>logo ou outra coisa</h1>
+          <img src="./imgs/logo-GPQIT-anim.gif" alt="" />
         </div>
         <!--logo-footer-->
       </div>
