--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
                 crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <body>
-<!-- Trocar nome do professor emanuel para o helio e trocar logo das outras paginas -->
+<!-- Coloca o nome GPQIT em cima do texto grande e no foot. ok
+
+Coloca o nome members no lugar de members.html. ok
+
+Coloca o nome Collaborations no luga de opening. ok
+
+Atualiza isso tudo para as outras páginas. ok
+
+INSPIRAÇÕES
+
+https://www.felipefantuzzi.org/current-members
+
+Página de members pode ser inspirada nessa. ok
+
+https://www.felipefantuzzi.org/latin-america
+
+De colaboradores nessa. -->
                 <header>
                     <div class="logo">
                         <h1><a href="./index.html" target="_blank" rel="noopener noreferrer"><img src="./imgs/logo-GPQIT-anim.gif" alt=""></a></h1>
@@ -26,11 +42,11 @@
                     <nav class="desktop">
                         <ul>
                             <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
-                            <li><a href="./people.html" target="_blank" rel="noopener noreferrer">People</a></li>
+                            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Members</a></li>
                             <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publications</a>
                             </li>
                             <li><a href="./news.html" target="_blank" rel="noopener noreferrer">News</a></li>
-                            <li><a href="./openings.html" target="_blank" rel="noopener noreferrer">Openings</a></li>
+                            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Collaborations</a></li>
                             <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contact</a></li>
                         </ul>
                     </nav>
@@ -39,11 +55,11 @@
                     <nav class="mobile" id="mobile">
                         <ul>
                             <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
-                            <li><a href="./people.html" target="_blank" rel="noopener noreferrer">People</a></li>
+                            <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Members</a></li>
                             <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publications</a>
                             </li>
                             <li><a href="./news.html" target="_blank" rel="noopener noreferrer">News</a></li>
-                            <li><a href="./openings.html" target="_blank" rel="noopener noreferrer">Openings</a></li>
+                            <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Collaborations</a></li>
                             <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contact</a></li>
                         </ul>
                     </nav>
@@ -56,10 +72,10 @@
 
             <div class="content">
                 <div class="prof">
-                    <div class="prof-people">
+                    <div class="prof-members.html">
                         <a href="#"><img src="./imgs/5856e43d-99d7-400c-9c4d-d67201fadf99.jpg"></a>
                     </div>
-                    <!--prof-people-->
+                    <!--prof-members.html-->
                     <div class="prof-infor">
                         <h1>Grupo de Pesquisa em Quimica Inorganica Teorica</h1>
                         <p>Ao terminarmos o nosso doutoramento, em 1997, fomos recebidos prontamente pelo Prof. Wagner B. De Almeida em seu grupo de pesquisa para um estágio de Pós-Doutorado. Já nesta época, o Laboratório de Química Computacional e Modelagem Molecular -LQC-MM se encontrava consolidado com grande prestígio nacional e internacional. Em 1999, entramos para o quadro permanente do Departamento de Química na área de concentração em Química Inorgânica. Era um grande desafio: estabelecer a linha de pesquisa em Química Teórica na área de concentração em Química Inorgânica. Neste início, contamos com a ajuda inestimável do Prof. Wagner B. De Almeida que colocou o seu laboratório e suas facilidades a nossa disposição. Nos apoiou nas nossas iniciativas, abrindo espaço para uma colaboração efetiva e muito produtiva. Desta forma, participamos do LQC-MM como pesquisador associado até 2002. O nosso esforço em estabelecer e consolidarmos a nossa linha de pesquisa rendeu frutos. Com os novos alunos de graduação e de pós-graduação e a necessidade de espaço físico para novos equipamentos, tornou-se necessário o surgimento de um novo grupo de pesquisa: GPQIT.
@@ -110,16 +126,12 @@
                         <div class="infor-footer">
                             <h1>Noticas mais recentes</h1>
 
-                            <a href="#" target="_blank" rel="noopener noreferrer">Novas memórias do Prof. Emmanuel Silva
-                                Marinho da
-                                silva</a>
+                            <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
                             <span>16/09/1111</span>
 
                             <div class="traco"></div>
 
-                            <a href="#" target="_blank" rel="noopener noreferrer">Novas memórias do Prof. Emmanuel Silva
-                                Marinho da
-                                silva</a>
+                            <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
                             <span>16/09/1111</span>
 
                             <a href="#" target="_blank" rel="noopener noreferrer"> veja todas as Noticas</a>
