--- a/news.html
+++ b/news.html
@@ -20,8 +20,8 @@
       <div class="logo">
         <h1>
           <a href="./index.html" target="_blank" rel="noopener noreferrer"
-            >logo</a
-          >
+            ><img src="./imgs/logo-GPQIT-anim.gif" alt=""
+          /></a>
         </h1>
         <div class="list-mobile">
           <i class="fas fa-bars"></i>
@@ -38,8 +38,8 @@
             >
           </li>
           <li>
-            <a href="./people.html" target="_blank" rel="noopener noreferrer"
-              >People</a
+            <a href="./members.html" target="_blank" rel="noopener noreferrer"
+              >Members</a
             >
           </li>
           <li>
@@ -56,8 +56,8 @@
             >
           </li>
           <li>
-            <a href="./openings.html" target="_blank" rel="noopener noreferrer"
-              >Openings</a
+            <a href="./collaborations.html" target="_blank" rel="noopener noreferrer"
+              >Collaborations</a
             >
           </li>
           <li>
@@ -77,8 +77,8 @@
             >
           </li>
           <li>
-            <a href="./people.html" target="_blank" rel="noopener noreferrer"
-              >People</a
+            <a href="./members.html" target="_blank" rel="noopener noreferrer"
+              >Members</a
             >
           </li>
           <li>
@@ -95,8 +95,8 @@
             >
           </li>
           <li>
-            <a href="./openings.html" target="_blank" rel="noopener noreferrer"
-              >Openings</a
+            <a href="./collaborations.html" target="_blank" rel="noopener noreferrer"
+              >Collaborations</a
             >
           </li>
           <li>
@@ -199,14 +199,11 @@
           <h1>localização</h1>
 
           <p>
-            Universidade Estadual do Ceará, Faculdade de Filosofia Dom Aureliano
-            Matos - FAFIDAM.
+            Universidade Federal de Minas Gerais, Departamento de Química - ICEx
+            Setor Inorgânica.
           </p>
 
-          <p>
-            Endereço:Av. Dom Aureliano Matos, 2058 centro 62930000 - Limoeiro do
-            Norte, CE - Brasil
-          </p>
+          <p>31.270-901 Belo Horizonte - MG Brasil</p>
           <p>Telefone: (88) 34236962</p>
           <p>Fax: (88) 34236963</p>
           <a href="#" target="_blank" rel="noopener noreferrer"
@@ -220,16 +217,12 @@
         <div class="infor-footer">
           <h1>Noticas mais recentes</h1>
 
-          <a href="#" target="_blank" rel="noopener noreferrer"
-            >Novas memórias do Prof. Emmanuel Silva Marinho da silva</a
-          >
+          <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
           <span>16/09/1111</span>
 
           <div class="traco"></div>
 
-          <a href="#" target="_blank" rel="noopener noreferrer"
-            >Novas memórias do Prof. Emmanuel Silva Marinho da silva</a
-          >
+          <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
           <span>16/09/1111</span>
 
           <a href="#" target="_blank" rel="noopener noreferrer">
@@ -242,7 +235,7 @@
 
       <div class="footer-singles">
         <div class="logo-footer">
-          <h1>logo ou outra coisa</h1>
+          <img src="./imgs/logo-GPQIT-anim.gif" alt="" />
         </div>
         <!--logo-footer-->
       </div>
