--- a/research.html
+++ b/research.html
@@ -18,105 +18,50 @@
   <body>
     <header>
       <div class="logo">
-        <h1>
-          <a href="./index.html" target="_blank" rel="noopener noreferrer"
-            >logo</a
-          >
-        </h1>
-        <div class="list-mobile">
-          <i class="fas fa-bars"></i>
-        </div>
-        <!--list-mobile-->
+          <h1><a href="./index.html" target="_blank" rel="noopener noreferrer"><img src="./imgs/logo-GPQIT-anim.gif" alt=""></a></h1>
+          <div class="list-mobile">
+              <i class="fas fa-bars"></i>
+          </div>
+          <!--list-mobile-->
       </div>
       <!--logo-->
 
       <nav class="desktop">
-        <ul>
-          <li>
-            <a href="./research.html" target="_blank" rel="noopener noreferrer"
-              >Research</a
-            >
-          </li>
-          <li>
-            <a href="./people.html" target="_blank" rel="noopener noreferrer"
-              >People</a
-            >
-          </li>
-          <li>
-            <a
-              href="./publications.html"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Publications</a
-            >
-          </li>
-          <li>
-            <a href="./news.html" target="_blank" rel="noopener noreferrer"
-              >News</a
-            >
-          </li>
-          <li>
-            <a href="./openings.html" target="_blank" rel="noopener noreferrer"
-              >Openings</a
-            >
-          </li>
-          <li>
-            <a href="./contact.html" target="_blank" rel="noopener noreferrer"
-              >Contact</a
-            >
-          </li>
-        </ul>
+          <ul>
+              <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
+              <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Members</a></li>
+              <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publications</a>
+              </li>
+              <li><a href="./news.html" target="_blank" rel="noopener noreferrer">News</a></li>
+              <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Collaborations</a></li>
+              <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contact</a></li>
+          </ul>
       </nav>
       <!--desktop-->
 
       <nav class="mobile" id="mobile">
-        <ul>
-          <li>
-            <a href="./research.html" target="_blank" rel="noopener noreferrer"
-              >Research</a
-            >
-          </li>
-          <li>
-            <a href="./people.html" target="_blank" rel="noopener noreferrer"
-              >People</a
-            >
-          </li>
-          <li>
-            <a
-              href="./publications.html"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Publications</a
-            >
-          </li>
-          <li>
-            <a href="./news.html" target="_blank" rel="noopener noreferrer"
-              >News</a
-            >
-          </li>
-          <li>
-            <a href="./openings.html" target="_blank" rel="noopener noreferrer"
-              >Openings</a
-            >
-          </li>
-          <li>
-            <a href="./contact.html" target="_blank" rel="noopener noreferrer"
-              >Contact</a
-            >
-          </li>
-        </ul>
+          <ul>
+              <li><a href="./research.html" target="_blank" rel="noopener noreferrer">Research</a></li>
+              <li><a href="./members.html" target="_blank" rel="noopener noreferrer">Members</a></li>
+              <li><a href="./publications.html" target="_blank" rel="noopener noreferrer">Publications</a>
+              </li>
+              <li><a href="./news.html" target="_blank" rel="noopener noreferrer">News</a></li>
+              <li><a href="./collaborations.html" target="_blank" rel="noopener noreferrer">Collaborations</a></li>
+              <li><a href="./contact.html" target="_blank" rel="noopener noreferrer">Contact</a></li>
+          </ul>
       </nav>
       <!--mobile-->
 
       <div class="clear"></div>
       <!--clear-->
-    </header>
+  </header>
+
 
     <div class="content">
       <div class="research">
         <div class="research-single">
           <div class="text-research">
-            <h1>Lorem ipsum</h1>
+            <h1>GPQIT</h1>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo
               reiciendis nobis esse libero cum. Id, voluptatibus voluptatem
@@ -140,7 +85,7 @@
         <!--research-single-->
         <div class="research-single">
           <div class="text-research">
-            <h1>Lorem ipsum</h1>
+            <h1>GPQIT</h1>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo
               reiciendis nobis esse libero cum. Id, voluptatibus voluptatem
@@ -164,7 +109,7 @@
         <!--research-single-->
         <div class="research-single">
           <div class="text-research">
-            <h1>Lorem ipsum</h1>
+            <h1>GPQIT</h1>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo
               reiciendis nobis esse libero cum. Id, voluptatibus voluptatem
@@ -188,7 +133,7 @@
         <!--research-single-->
         <div class="research-single">
           <div class="text-research">
-            <h1>Lorem ipsum</h1>
+            <h1>GPQIT</h1>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo
               reiciendis nobis esse libero cum. Id, voluptatibus voluptatem
@@ -212,7 +157,7 @@
         <!--research-single-->
         <div class="research-single">
           <div class="text-research">
-            <h1>Lorem ipsum</h1>
+            <h1>GPQIT</h1>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo
               reiciendis nobis esse libero cum. Id, voluptatibus voluptatem
@@ -241,59 +186,47 @@
 
     <footer>
       <div class="footer-singles">
-        <div class="locali-footer">
-          <h1>localização</h1>
+          <div class="locali-footer">
+              <h1>localização</h1>
 
-          <p>
-            Universidade Estadual do Ceará, Faculdade de Filosofia Dom Aureliano
-            Matos - FAFIDAM.
-          </p>
+              <p>Universidade Federal de Minas Gerais, Departamento de Química - ICEx 
+                  Setor  Inorgânica.</p>
 
-          <p>
-            Endereço:Av. Dom Aureliano Matos, 2058 centro 62930000 - Limoeiro do
-            Norte, CE - Brasil
-          </p>
-          <p>Telefone: (88) 34236962</p>
-          <p>Fax: (88) 34236963</p>
-          <a href="#" target="_blank" rel="noopener noreferrer"
-            >Clique aqui para mais informações</a
-          >
-        </div>
-        <!--locali-footer-->
+              <p>31.270-901 Belo Horizonte - MG
+                  Brasil</p>
+              <p>Telefone: (88) 34236962</p>
+              <p>Fax: (88) 34236963</p>
+              <a href="#" target="_blank" rel="noopener noreferrer">Clique aqui para mais informações</a>
+          </div>
+          <!--locali-footer-->
       </div>
       <!--footer-singles-->
       <div class="footer-singles">
-        <div class="infor-footer">
-          <h1>Noticas mais recentes</h1>
+          <div class="infor-footer">
+              <h1>Noticas mais recentes</h1>
 
-          <a href="#" target="_blank" rel="noopener noreferrer"
-            >Novas memórias do Prof. Emmanuel Silva Marinho da silva</a
-          >
-          <span>16/09/1111</span>
+              <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
+              <span>16/09/1111</span>
 
-          <div class="traco"></div>
+              <div class="traco"></div>
 
-          <a href="#" target="_blank" rel="noopener noreferrer"
-            >Novas memórias do Prof. Emmanuel Silva Marinho da silva</a
-          >
-          <span>16/09/1111</span>
+              <a href="#" target="_blank" rel="noopener noreferrer">GPQIT</a>
+              <span>16/09/1111</span>
 
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            veja todas as Noticas</a
-          >
-        </div>
-        <!--infor-footer-->
+              <a href="#" target="_blank" rel="noopener noreferrer"> veja todas as Noticas</a>
+          </div>
+          <!--infor-footer-->
       </div>
       <!--footer-singles-->
 
       <div class="footer-singles">
-        <div class="logo-footer">
-          <h1>logo ou outra coisa</h1>
-        </div>
-        <!--logo-footer-->
+          <div class="logo-footer">
+              <img src="./imgs/logo-GPQIT-anim.gif" alt="">
+          </div>
+          <!--logo-footer-->
       </div>
       <!--footer-singles-->
-    </footer>
+  </footer>
     <script src="./scripts/heade.js"></script>
   </body>
 </html>
